Admin pages fixed

--- a/Html files/login.html
+++ b/Html files/login.html
@@ -24,7 +24,7 @@
         <div class="icons">
             <a href="login.html"><img src="./images/register.png" alt="" width="18px">Login</a>
             <a href="signup.html"><img src="./images/register.png" alt="" width="18px">Signup</a>
-            <a href="admin/login.html" id="admin-btn"><img src="./images/admin.png" alt="" width="18px">Admin</a>
+            <a href="admin/login.php" id="admin-btn"><img src="./images/admin.png" alt="" width="18px">Admin</a>
         </div>
     </div>
     
