--- a/admin/login.html
+++ b/admin/login.html
@@ -86,11 +86,6 @@
     }
 }
 
-.bg-register-image img {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-}
 
 
 
@@ -139,7 +134,7 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"><img src="img/admin cover.jpg" alt="" class="img-fluid" height="100%" width="100%" ></div>
+                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
@@ -162,7 +157,7 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <a href="tables.html" class="btn btn-primary btn-user btn-block">
+                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </a>
                                         <hr>
