--- a/admin/forgot-password.html
+++ b/admin/forgot-password.html
@@ -21,77 +21,6 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
     <style>
-
-
-          /* top navbar */
-.top-navbar{
-    background-color: #fff;
-    display: flex;
-    justify-content: space-between;
-}
-.top-navbar p{
-    color: green;
-    margin-top: 13px;
-    margin-left: 15px;
-}
-.top-navbar .icons{
-    margin-top: 13px;
-    margin-right: 15px;
-}
-.top-navbar a{
-    text-decoration: none;
-    color: black;
-    margin-left: 10px;
-}
-.top-navbar a img{
-    margin-bottom: 3px;
-}
-.top-navbar a:hover{
-    color: black;
-}
-@media screen and (max-width:400px){
-    .top-navbar a{
-        font-size: 13px;
-    }
-    .top-navbar a img{
-        width: 15px;
-    }
-    .top-navbar p{
-        font-size: 13px;
-    }
-}
-@media screen and (max-width:320px){
-    .top-navbar a{
-        font-size: 10px;
-    }
-    .top-navbar a img{
-        width: 13px;
-    }
-    .top-navbar p{
-        font-size: 10px;
-    }
-}
-@media screen and (max-width:318px){
-    .top-navbar a{
-        font-size: 8px;
-        margin-left: 0;
-    }
-    .top-navbar a img{
-        width: 10px;
-        margin-left: 0;
-    }
-    .top-navbar p{
-        font-size: 10px;
-        margin-top: 20px;
-    }
-}
-
-.bg-register-image img {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-}
-
         .bg-gradient-primary {
             background-color: #28a745 !important; /* Change to green */
             background-image: linear-gradient(180deg, #28a745 10%, #28a745 100%) !important; /* Change to green */
@@ -113,18 +42,6 @@
 
 </head>
 
-
-<!-- top navbar -->
-<div class="top-navbar">
-    <p>WELCOME TO AgriGift</p>
-    <div class="icons">
-        <a href="login.html"><img src="./images/register.png" alt="" width="18px">Login</a>
-        <a href="signup.html"><img src="./images/register.png" alt="" width="18px">Signup</a>
-        <a href="C:\xampp\htdocs\Project\admin\login.html" id="admin-btn"><img src="./images/admin.png" alt="" width="18px">Admin</a>
-    </div>
-</div>
-
-
 <body class="bg-gradient-primary">
 
     <div class="container">
@@ -138,7 +55,7 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-password-image"><img src="img/admin cover.jpg" alt="" class="img-fluid" height="100%" width="100%" ></div>
+                            <div class="col-lg-6 d-none d-lg-block bg-password-image"></div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
